--- a/templates/model_main.html
+++ b/templates/model_main.html
@@ -14,53 +14,54 @@
 
         </form>
         <div class="flex w-fit">
-            <div class="flex flex-wrap content-center mx-4 hover:cursor-pointer refresh" onclick="refresh();">
+            <div class="flex flex-wrap content-center mx-4 hover:cursor-pointer refresh">
 
                 <span class="material-symbols-outlined">
                     sync
                 </span>
             </div>
-            <div up-href="/model/create" up-follow up-target="main" up-navigate='false'
+            <div up-href="/model/create" up-follow up-target="main"
                 class="flex flex-wrap content-center mx-4 hover:cursor-pointer">
 
                 <span class="material-symbols-outlined">
                     add_circle
                 </span>
             </div>
-        </div>
 
+        </div>
     </div>
 
     <div class="w-full h-full flex justify-center content-center mt-10">
         {% if models|length > 0 %}
         <div id="model-grid" class="grid-cols-5 gap-6 grid my-2 ml-2">
-
             {% for item in models %}
-            <a href="model/detail/{{item.id}}" up-target="div">
+            <a class="model_card" href="model/detail/{{item['id']}}" up-target="div">
                 <div
-                    class="border border-2 border-black-900 h-96 rounded-3xl overflow-hidden hover:scale-125 hover:z-10 hover:cursor-pointer bg-white duration-500 ">
+                    class="relative border border-2 border-black-900 h-96 rounded-3xl overflow-hidden hover:scale-125 hover:z-10 hover:cursor-pointer bg-white duration-500 ">
                     <img class="h-1/2 w-full" src="model_logo.png" />
                     <div class="p-2" style="font-family: Inter;">
                         <h2 id="name" style=" font-weight:800; font-size: 1.5vmax;">{{item.name}}</h2>
                         <h4 id="create_date"> Ngay tao: {{item.created_at}}</h4>
                         <h4 id="class_number"> So lop: {{item.cls_number}}</h4>
                         <div class="flex flex-wrap">
+                            {% for cls in item['cls_list'] %}
                             <div class="rounded-full bg-cyan-100 px-2 text-sm m-1">
-                                banh xeo
+                                {{cls}}
                             </div>
-                            <div class="rounded-full bg-cyan-100 px-2 text-sm m-1">
-                                banh xeo
-                            </div>
-                            <div class="rounded-full bg-cyan-100 px-2 text-sm m-1">
-                                banh xeo
-                            </div>
-                            <div class="rounded-full bg-cyan-100 px-2 text-sm m-1 ">
-                                banh xeo
-                            </div>
-
+                            {% endfor %}
                         </div>
                     </div>
+                    {% if item['status'] == "TRAINING" %}
+                    <div
+                        class="absolute loader_filter top-0 left-0 right-0 bottom-0 flex justify-center flex-wrap content-center flex-col">
+                        <div class="loader self-center">
 
+                        </div>
+                        <div class="text-white opacity-100 font-bold text-xl w-full text-center">
+                            Training
+                        </div>
+                    </div>
+                    {% endif %}
                 </div>
             </a>
             {% endfor %}
@@ -70,8 +71,15 @@
         {% endif %}
     </div>
     <script>
-        async function refresh(){
-            await up.render({"target": "main", "url": "./model"})
+        function detail() {
+            let btn = document.getElementById("train_btn")
+            if (btn.className.includes("hidden"))
+                btn.className = btn.className.replace(" hidden", "")
+            else
+                btn.className += " hidden"
+        }
+        async function refresh() {
+            await up.render({ "target": "main", "url": "./model", })
         }
         let refresh_icon = document.getElementsByClassName("refresh")[0]
         refresh_icon.addEventListener('click', function (event) {
@@ -86,5 +94,64 @@
             console.log(data.search)
             up.render({ "target": "main", "url": "/model?search=" + data.search });
         })
+        function mouseIn() {
+            console.log("mouse in")
+            let btn = document.getElementById("abort_btn")
+            btn.className = btn.className.replace("hidden", "block").replace("invisible", "visible")
+        }
+        function mouseOut() {
+            console.log("mouse out")
+            let btn = document.getElementById("abort_btn")
+            btn.className = btn.className.replace("block", "hidden").replace("visible", "invisible")
+        }
+        async function abort_train(id) {
+            console.log(id)
+            up.element.show(document.getElementsByTagName("loading-indicator")[0])
+            await fetch("/train/" + id, {
+                method: "DELETE",
+                redirect: "follow"
+            }).then(async (response) => {
+                if (response.ok) {
+                    data = await response.json();
+                    console.log(data)
+                    if (response.status != 200) {
+                        alert(data["detail"])
+                    }
+                    else {
+                        alert(data['message'])
+                    }
+                    up.element.hide(document.getElementsByTagName("loading-indicator")[0])
+                    up.render({ "target": "main", "url": "/model/detail/" + id, "navigate": false })
+                }
+            }).catch((error) => {
+                alert("There is an error that we are trying to resolve as soon as possible.")
+                up.element.hide(document.getElementsByTagName("loading-indicator")[0])
+
+            })
+        }
+        async function delete_model(id) {
+            up.element.show(document.getElementsByTagName("loading-indicator")[0])
+            await fetch("/model/" + id, {
+                method: "DELETE",
+                redirect: "follow"
+            }).then(async (response) => {
+                if (response.ok) {
+                    data = await response.json();
+                    console.log(data)
+                    if (response.status != 200) {
+                        alert(data["detail"])
+                    }
+                    else {
+                        alert(data['message'])
+                    }
+                    up.element.hide(document.getElementsByTagName("loading-indicator")[0])
+                    up.render({ "target": "main", "url": "/model", "navigate": false })
+                }
+            }).catch((error) => {
+                alert("There is an error that we are trying to resolve as soon as possible.")
+                up.element.hide(document.getElementsByTagName("loading-indicator")[0])
+
+            })
+        }
     </script>
 </main>
