--- a/templates/model_detail.html
+++ b/templates/model_detail.html
@@ -30,8 +30,8 @@
                         <div class="mt-2">
                             <a href="/model/create?id={{id}}" up-target="main"
                                 class="bg-black py-2 px-6 text-white font-bold rounded-full w-1/2 h-fit text-center">Train</a>
-                            <a 
-                                class="bg-black py-2 px-6 text-white font-bold rounded-full w-1/2 h-fit text-center cursor-pointer" onclick="delete_model('{{id}}');">Delete</a>
+                            <a class="bg-black py-2 px-6 text-white font-bold rounded-full w-1/2 h-fit text-center cursor-pointer"
+                                onclick="delete_model('{{id}}');">Delete</a>
                         </div>
                     </div>
                     <div class="flex m-2">
@@ -75,11 +75,10 @@
                         </form>
                     </div>
                     <div class="w-1/4 pt-6 pl-2 flex flex-col">
-                        <button class="bg-black py-2 px-6 text-white font-bold rounded-full w-1/2">Predict</button>
-                        <div
-                            class="w-full border-4 border-black-900 ml-2  rounded-se-3xl rounded-es-3xl flex grow mt-2">
-
-                        </div>
+                        <button class="bg-black py-2 px-6 text-white font-bold rounded-full w-1/2"
+                            onclick="predict('{{id}}');">Predict</button>
+                        <pre id="predict_container"
+                            class="w-full border-4 border-black-900 ml-2  rounded-se-3xl rounded-es-3xl flex grow mt-2 p-4" />
                     </div>
                 </div>
             </div>
