--- a/templates/model_main.html
+++ b/templates/model_main.html
@@ -170,7 +170,7 @@
             let input = document.getElementById("file")
             let data = new FormData()
             data.append("image", input.files[0], input.files[0].name);
-            prediction = await fetch("/model/" + model + "/predict", { method: "POST", body: data}).then(async (response) => {
+            prediction = await fetch("/model/" + model + "/predict", { method: "POST", body: data }).then(async (response) => {
                 data = await response.json()
                 if (response.status == 200)
                     return data
@@ -185,6 +185,11 @@
             if (prediction) {
                 document.getElementById("predict_container").textContent = JSON.stringify(prediction, undefined, 2)
             }
+        }
+        function reset() {
+            document.getElementById("file").value = ""
+            document.getElementById("show_image").src = ""
+            up.element.show(document.getElementsByClassName("box__input")[0])
         }
     </script>
 </main>
